# rust-gpu-wgpu-compute-minimal

./: Cargo.toml  README.md  build.rs
kernels/collatz/: Cargo.toml
src/: main.rs
